spacing issues

--- a/css/main.css
+++ b/css/main.css
@@ -344,15 +344,15 @@ header {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
-    padding-top: 30px;
     padding: 30px 10px 0px 10px;
     min-height: 400px;
     max-width: 850px;
     margin: 20px auto 0px auto;
-    row-gap: 35px;
+    row-gap: 20px;
     grid-column: 3/4;
     grid-row: 4/5;
     z-index: 4;
+    -border: 1px solid red;
 }
 
 .cell1 {
@@ -613,6 +613,11 @@ header {
     display: none;
 }
 
+#dropDown1,
+#dropDown2 {
+    margin-top: 10px;
+}
+
 #locate {
     width: 90%;
     max-width: 700px;
@@ -780,7 +785,7 @@ footer ul li {
         min-height: 400px;
         max-width: 850px;
         margin: 0px auto;
-        -row-gap: 35px;
+        row-gap: 0px;
         grid-column: 3/4;
         grid-row: 4/5;
         z-index: 4;
@@ -789,11 +794,14 @@ footer ul li {
         position: relative;
         flex-grow: 1;
         flex-shrink: 1;
-        flex-basis: 250px;
-        padding: 20px 1.5% 0px 1.5%;
+        flex-basis: auto;
+        padding: 20px 1.5% 15px 1.5%;
         width: 98%;
         min-width: 250px;
         max-width: 600px;
+        height: max-content;
+        -border: 1px solid blue;
+        margin: 0px auto;
     }
     .cell1 p {
         margin-top: 2.25rem;
@@ -806,12 +814,13 @@ footer ul li {
         flex-grow: 1;
         flex-shrink: 1;
         flex-basis: 250px;
-        min-height: 250px;
+        -min-height: 250px;
         max-width: 400px;
         min-width: 250px;
         position: relative;
-        top: -20px;
+        -top: -20px;
         -border: 1px solid red;
+        margin-top: 10px;
     }
     .cell2 img {
         display: block;
@@ -861,7 +870,7 @@ footer ul li {
         width: 100%;
         max-width: 800px;
         height: auto;
-        margin: 20px auto;
+        margin: 40px auto 20px auto;
         background-color: rgb(7, 7, 7);
         column-gap: 40px;
     }
@@ -878,6 +887,7 @@ footer ul li {
         overflow: auto;
         padding: 2%;
         border-radius: 5px;
+        margin-top: 30px;
     }
     .central-image h3 {
         padding-bottom: 10px;
